feat: module 8, init